<resources>
    <string name="app_name">Exhibition</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="description">Description</string>
    <string name="new_scene">New Scene</string>
    <string name="name">Name</string>
    <string name="choose">Choose</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="next_scene">Next Scene</string>
    <string name="previous_scene">Previous Scene</string>
    <string name="picture_background">Picture (background)</string>
    <string name="no">No</string>
    <string name="name_must_not_be_empty">Name must not be empty</string>
    <string name="you_must_add_the_picture">You must add the picture</string>
    <string name="exhibition">Exhibition</string>
    <string name="scenes">Scenes</string>
    <string name="exhibition_name_can_t_be_empty">Exhibition name can\'t be empty</string>
    <string name="add_scene">Add New Scene</string>
    <string name="save">Save</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="deleted_successfully">Deleted successfully!</string>
    <string name="drag_and_drop">Drag a point to wanted position</string>
    <string name="add_point">Add Point</string>
    <string name="add_content">Add content</string>
    <string name="edit_content">Edit</string>
    <string name="save_new_position">Re-save position</string>
    <string name="delete">Delete</string>
    <string name="selected_point">Selected Point:</string>
    <string name="choose_the_type_of_the_content">Choose the type of content</string>
    <string name="create_content">Create Content</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="picture">Picture</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="autoplay">Autoplay   </string>
    <string name="create_new">Create new</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="text_exh_info_part_1">There are %1$d exhibitions in the app directory.</string>
    <string name="count_scenes">%1$s scene(s)</string>
    <string name="run">Run</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="or_load_text_from_file_txt">or load text from file (.txt)</string>
</resources>
