<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_for_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/create_exhibition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exhibition"
                android:textColor="@color/maintext"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_exhibition_name"
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/mainactivesec"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/validation_exh_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exhibition_name_can_t_be_empty"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/exh_save"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@color/mainactivesec"
                    android:onClick="onClick"
                    android:text="@string/save"
                    android:textColor="@color/mainbg"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/exh_add_scene"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/mainactivesec"
                    android:onClick="onClickNewScene"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/add_new_scene"
                    android:textColor="@color/mainbg" />
            </LinearLayout>

            <TextView
                android:id="@+id/count_scenes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/scenes"
                android:textStyle="italic" />

            <GridView
                android:id="@+id/grid_scenes"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>