<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@drawable/custom_scroll_style"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_for_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/create_exhibition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_content"
                android:textColor="@color/maintext"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/mainactivesec"
                android:hint="@string/title"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/mainactivesec"
                android:gravity="start|top"
                android:hint="@string/text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="@color/maintext"
                android:textColorHighlight="@color/mainactive"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@color/mainactivesec" />

            <TextView
                android:id="@+id/if_text_from_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/or_load_text_from_file_txt" />

            <LinearLayout
                android:id="@+id/if_load_from_file"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/mainactivesec"
                    android:onClick="onClickLoad"
                    android:text="@string/choose"
                    android:textColor="@color/mainbg" />
            </LinearLayout>

            <TextView
                android:id="@+id/if_picture_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="15dp"
                android:text="@string/picture"
                android:textColor="@color/maintitle"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/if_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/mainactivesec"
                    android:onClick="onClickLoad"
                    android:text="@string/choose"
                    android:textColor="@color/mainbg" />

                <ImageView
                    android:id="@+id/scene_pic"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:adjustViewBounds="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/if_audio_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="15dp"
                android:text="@string/audio"
                android:textColor="@color/maintitle"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/if_audio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/mainactivesec"
                    android:onClick="onClickLoad"
                    android:text="@string/choose"
                    android:textColor="@color/mainbg" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/if_video_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="15dp"
                android:text="@string/video"
                android:textColor="@color/maintitle"
                android:textSize="18sp"
                android:visibility="gone"
                tools:text="Video" />

            <LinearLayout
                android:id="@+id/if_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/mainactivesec"
                    android:onClick="onClickLoad"
                    android:text="@string/choose"
                    android:textColor="@color/mainbg" />

                <TextView
                    android:id="@+id/text_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <Switch
                android:id="@+id/autoplay"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/autoplay"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainpanel"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/mainactivesec"
                android:onClick="onClick"
                android:text="@string/save"
                android:textColor="@color/mainbg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:width="50dp"
                android:background="@drawable/arrow_left"
                android:onClick="onClickClose" />

            <TextView
                android:id="@+id/text_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:onClick="onClickClose"
                android:paddingLeft="5dp"
                android:text="@string/back"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>